rename batch operations to 'create' and 'upsert' so it's more clear what they do
