# lib/handlers/indexes/{name}/batch.js
@@ -11,11 +11,11 @@ module.exports = {
 
     const batchArgs = {
       insert: batchRequests
-        .filter({action: 'addObject'})
+        .filter({action: 'create'})
         .map('body')
         .value(),
-      update: batchRequests
-        .filter({action: 'updateObject'})
+      upsert: batchRequests
+        .filter({action: 'upsert'})
         .map(request => {
           return {
             data: request.body,
@@ -27,7 +27,7 @@ module.exports = {
 
     index.batchOperation(batchArgs)
       .then(result => {
-        reply({objectIDs: _.union(result.inserted, result.updated)});
+        reply({objectIDs: _.union(result.inserted, result.upserted)});
       }, reply.error.bind(reply));
   }
 };
